--- a/NetVecCad/MainWindow.xaml
+++ b/NetVecCad/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
+        xmlns:nvcView="clr-namespace:NVcadView;assembly=NVcadView"
         x:Class="NetVecCad.MainWindow"
         Title="NetVecCad" Height="600" Width="800" ScrollViewer.VerticalScrollBarVisibility="Disabled">
     <Grid x:Name="TopGrid" ScrollViewer.VerticalScrollBarVisibility="Disabled">
@@ -21,8 +22,8 @@
         </Grid.ColumnDefinitions>
         <xctk:WindowContainer Grid.Column="2" Grid.Row="2" 
             x:Name="MainWindowContainer" 
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch" 
-            Loaded="MainWindowContainer_Loaded" Background="#FFEFF9FD" />
+            Loaded="MainWindowContainer_Loaded" Background="#FF64C6EC">
+            <!--<nvcView:NVcad2dViewWindow Margin="0" Canvas.Left="16" Canvas.Top="24" Width="350" Height="450" />-->
+        </xctk:WindowContainer>
     </Grid>
 </Window>
