--- a/NVcadView/Themes/Generic.xaml
+++ b/NVcadView/Themes/Generic.xaml
@@ -31,4 +31,17 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <!--<Style TargetType="{x:Type local:NVcad2dViewCanvas}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:NVcad2dViewCanvas}">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>-->
 </ResourceDictionary>
