--- a/NVcadView/Themes/Generic.xaml
+++ b/NVcadView/Themes/Generic.xaml
@@ -2,7 +2,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
-    xmlns:local="clr-namespace:NVcadView">
+    xmlns:local="clr-namespace:NVcadView"
+    
+    >
     <Style TargetType="{x:Type local:NVcad2dViewWindow}">
         <Setter Property="Template">
             <Setter.Value>
