--- a/NetVecCad/MainWindow.xaml
+++ b/NetVecCad/MainWindow.xaml
@@ -22,6 +22,7 @@
             <ColumnDefinition Width="0" MaxWidth="24"/>
             <ColumnDefinition Width="24" MaxWidth="24"/>
         </Grid.ColumnDefinitions>
+        <Button Click="Button_Click">H</Button>
         <xctk:WindowContainer Grid.Column="2" Grid.Row="2" 
             x:Name="MainWindowContainer" 
             Loaded="MainWindowContainer_Loaded" Background="#FF64C6EC">
