--- a/NetVecCad/MainWindow.xaml
+++ b/NetVecCad/MainWindow.xaml
@@ -3,11 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
         xmlns:nvcView="clr-namespace:NVcadView;assembly=NVcadView"
+        xmlns:local="clr-namespace:NVcadModerator;assembly=NVcadModerator"
         x:Class="NetVecCad.MainWindow"
         Title="NetVecCad" Height="620" Width="800" 
         ScrollViewer.VerticalScrollBarVisibility="Disabled" 
         ContentRendered="Window_ContentRendered">
     <Grid x:Name="TopGrid" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+        <Grid.DataContext>
+            <local:Moderator/>
+        </Grid.DataContext>
         <Grid.RowDefinitions>
             <RowDefinition Height="24" MaxHeight="24"/>
             <RowDefinition Height="0" MaxHeight="24"/>
@@ -27,5 +31,16 @@
             Loaded="MainWindowContainer_Loaded" Background="#FF64C6EC">
             <!--<nvcView:NVcad2dViewWindow Margin="0" Canvas.Left="16" Canvas.Top="24" Width="350" Height="450" />-->
         </xctk:WindowContainer>
+        <StackPanel Orientation="Horizontal" 
+                    Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3">
+            <TextBlock MinWidth="60"
+               Text="{Binding WorldMouseX, Mode=OneWay, 
+                StringFormat=\{0:F\},
+                UpdateSourceTrigger=PropertyChanged}" >
+            </TextBlock>
+            <TextBlock MinWidth="60"
+               Text="{Binding WorldMouseY, Mode=OneWay, StringFormat=\{0:F\},
+                UpdateSourceTrigger=PropertyChanged}" ></TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
